# ex_stock_research_1

./: .gitignore  README.md  main.py  pyproject.toml  tmp.env
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
drawio/: solution.drawio
notebooks/: test.ipynb
outputs/: COST_output.md  NBIS_output.md  PLTR_output.md
stock_analysis_agent/: agent.py  prompts.py
test_agent_one/: agent.py
tools/: customtool.py
